--- a/index.html
+++ b/index.html
@@ -84,32 +84,42 @@
   <h1>wahaha</h1>
 
   <div class="category">
-    <h2>💻 工作办公</h2>
-    <div class="links">
-      <div class="link"><a href="https://mail.google.com"  target="_blank"><i class="fas fa-envelope"></i><span>邮箱</span></a></div>
-      <div class="link"><a href="https://drive.google.com"  target="_blank"><i class="fas fa-cloud"></i><span>云盘</span></a></div>
-      <div class="link"><a href="https://github.com"  target="_blank"><i class="fab fa-github"></i><span>GitHub</span></a></div>
-      <div class="link"><a href="https://jira.atlassian.com"  target="_blank"><i class="fas fa-bug"></i><span>JIRA</span></a></div>
-    </div>
-  </div>
-
-  <div class="category">
     <h2>📚 学习资源</h2>
     <div class="links">
-      <div class="link"><a href="https://developer.mozilla.org"  target="_blank"><i class="fas fa-book"></i><span>MDN 文档</span></a></div>
+      <div class="link"><a href="https://www.doubao.com"  target="_blank"><i class="fas fa-envelope"></i><span>豆包</span></a></div> 
+      <div class="link"><a href="https://chat.qwen.ai"  target="_blank"><i class="fas fa-envelope"></i><span>Qwen</span></a></div> 
+      <div class="link"><a href="https://grok.com/"  target="_blank"><i class="fas fa-envelope"></i><span>gork3</span></a></div>
+      <div class="link"><a href="https://yiyan.baidu.com"  target="_blank"><i class="fas fa-book"></i><span>文心一言</span></a></div>
       <div class="link"><a href="https://www.w3schools.com"  target="_blank"><i class="fas fa-laptop-code"></i><span>W3Schools</span></a></div>
       <div class="link"><a href="https://leetcode.com"  target="_blank"><i class="fas fa-code"></i><span>LeetCode</span></a></div>
-      <div class="link"><a href="https://www.zhihu.com"  target="_blank"><i class="fas fa-lightbulb"></i><span>知乎</span></a></div>
+      <div class="link"><a href="https://developer.mozilla.org"  target="_blank"><i class="fas fa-book"></i><span>MDN 文档</span></a></div>
     </div>
   </div>
 
   <div class="category">
-    <h2>🎮 娱乐休闲</h2>
+    <h2>💻 工作办公</h2>
     <div class="links">
-      <div class="link"><a href="https://www.bilibili.com"  target="_blank"><i class="fab fa-bilibili"></i><span>B站</span></a></div>
-      <div class="link"><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube"></i><span>YouTube</span></a></div>
-      <div class="link"><a href="https://music.163.com"  target="_blank"><i class="fas fa-music"></i><span>网易云音乐</span></a></div>
-      <div class="link"><a href="https://www.douban.com"  target="_blank"><i class="fas fa-star"></i><span>豆瓣</span></a></div>
+      <div class="link"><a href="https://mail.google.com"  target="_blank"><i class="fas fa-envelope"></i><span>谷歌邮箱</span></a></div>
+      <div class="link"><a href="https://mail.google.com"  target="_blank"><i class="fas fa-envelope"></i><span>QQ邮箱</span></a></div>
+      <div class="link"><a href="https://github.com"  target="_blank"><i class="fab fa-github"></i><span>GitHub</span></a></div>
+    </div>
+  </div>
+
+  <div class="category">
+    <h2>📚 文献阅读</h2>
+    <div class="links">
+      <div class="link"><a href="https://www.xljsci.com/"  target="_blank"><i class="fas fa-book"></i><span>小绿鲸</span></a></div>  
+      <div class="link"><a href="https://scholar.google.com/"  target="_blank"><i class="fas fa-book"></i><span>谷歌学术</span></a></div>
+      <div class="link"><a href="https://arxiv.org/"  target="_blank"><i class="fas fa-laptop-code"></i><span>arXiv</span></a></div>
+      <div class="link"><a href="https://www.cnki.net/"  target="_blank"><i class="fas fa-code"></i><span>知网</span></a></div>
+    </div>
+  </div>
+
+  <div class="category">
+    <h2>🎮 学校网站</h2>
+    <div class="links">
+      <div class="link"><a href="https://ehall.sicnu.edu.cn/new/index.html"  target="_blank"><i class="fab fa-bilibili"></i><span>服务大厅</span></a></div>
+      <div class="link"><a href="http://202.115.196.190:8090/?haveCasLogin=1&username=20241393035&password=a97d032d90a04946aa4a5088cf8c8861#/dashboard"  target="_blank"><i class="fab fa-youtube"></i><span>管理系统</span></a></div>
     </div>
   </div>
 
